framec_tests/language_specific/rust/v3_outline/negative/handler_outside_state.frm
@target rust

system S {
    machine:
        e() {
            => $^
        }
}

